# learning-cmake

./: .gitignore  CMakeLists.txt  Doxyfile.in  build.sh  common.h  main.cpp  xiaoai.cpp  xiaoai.h
greeting/: CMakeLists.txt  nihao.cpp  nihao.h  nihao.h.in
